--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
-chembl-webresource-client 
-pubchempy 
-requests 
-rdkit-pypi 
-pandas 
-numpy 
-scikit-learn 
-matplotlib 
-seaborn 
-torch 
+chembl-webresource-client
+pubchempy
+requests
+rdkit-pypi
+pandas
+numpy
+scikit-learn
+scipy
+matplotlib
+seaborn
+tqdm
+python-Levenshtein
+prefect>=2.0
+torch
 torch-geometric
+pyyaml
